Added Header and Partition code to Kafka

--- a/spring-boot-apache-kafka-consumer/src/main/resources/application.properties
+++ b/spring-boot-apache-kafka-consumer/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+kafka.bootstrapAddress=localhost:9092
+topic.name=demo
+message.topic.name=message
+filtered.topic.name=filtered
+partitioned.topic.name=partitioned
