--- a/spring-boot-apache-kafka-producer/src/main/resources/application.properties
+++ b/spring-boot-apache-kafka-producer/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8082
-topic.name=demo
 kafka.bootstrapAddress=localhost:9092
+topic.name=demo
+message.topic.name=message
+filtered.topic.name=filtered
+partitioned.topic.name=partitioned
